review configuration stuff.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -29,6 +29,7 @@ eclipse.preferences.version=1
 #  Wherever it is said that an option can be "true" or "false", you can
 #  also use "yes"/"no", or "on/off".  Just for some convenience.
 #
+
 #
 #  You can use this to override the default application name.  It affects
 #  the HTML titles and logging, for example.  It can be different from
@@ -40,12 +41,9 @@ jspwiki.applicationName = ElWiki
 #
 #  Which page provider class to use.  Possibilities are:
 #
-#    FileSystemProvider     - for simple pure file storage with no version information
-#    VersioningFileProvider - for simple pure file storage with    version information
+# deprecated: FileSystemProvider     - for simple pure file storage with no version information
+# deprecated: VersioningFileProvider - for simple pure file storage with    version information
 #
-#jspwiki.pageProvider = FileSystemProvider
-#jspwiki.pageProvider = org.elwiki.pageprovider.FileSystemProvider
-#jspwiki.pageProvider = org.elwiki.pageprovider.ResourceXmiProvider
 jspwiki.pageProvider = org.elwiki.pageprovider.CdoWikiPageProvider
 
 #
@@ -87,37 +85,14 @@ jspwiki.pageProvider = org.elwiki.pageprovider.CdoWikiPageProvider
 jspwiki.usePageCache = true
 
 #
-#  Determines where wiki files are kept for FileSystemProvider i.e.:
-#
-#  jspwiki.fileSystemProvider.pageDir = /p/web/www-data/jspwiki/
-#
-#  If you're using Windows, then you must duplicate the backslashes.
-#  For example, use:
-#
-#  jspwiki.fileSystemProvider.pageDir = C:\\Data\\jspwiki
-#
-#  If not provided, will default to a "jspwiki-files" directory
-#  in the user's home folder.
-#
-jspwiki.fileSystemProvider.pageDir = /home/vfedorov/dev/dev_wiki/Temp/pages
-
-
-#
-#  The JSPWiki working directory.  If not set, a temporary path will
+#  The ElWiki working directory.  If not set, a temporary path will
 #  be used.  You can see the location of the workdir in the logs.
 #  It is HIGHLY recommended that you set this.
 #
 #  The working directory is used to cache things like Lucene search
 #  results.
 #
-#jspwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS
-# old workDir -- /home/vfedorov/dev/dev_wiki/WikiRoot/ElWiki_WorkDir
 elwiki.workDir = WS/
-#
-# For ElWiki
-# temporary? :FVK:
-#elwiki.workDir = /home/vfedorov/dev/dev_wikijsp/WS/ElWiki_WorkDir
-elwiki.attachmentDir = pages_attachment/
 
 #
 #  ATTACHMENTS:
@@ -144,6 +119,10 @@ jspwiki.attachmentProvider = BasicAttachmentProvider
 #  If not provided, will default to a "jspwiki-files" directory
 #  in the user's home folder.
 #
+
+#
+# For ElWiki
+elwiki.attachmentDir = pages_attachment/
 
 #
 #  You can tell the BasicAttachmentProvider to add a flag
@@ -224,17 +203,6 @@ jspwiki.diffProvider = TraditionalDiffProvider
 #  and 'UTF-8'.
 
 jspwiki.encoding = UTF-8
-
-#
-# The following 3 properties apply sensible constraints around custom page
-# properties that can be saved into the AbstractFileProvider. These default
-# values were chosen with future JDBC providers in mind.
-# See: https://issues.apache.org/jira/browse/JSPWIKI-856
-#
-#custom.pageproperty.max.allowed=200
-#custom.pageproperty.key.length=255
-#custom.pageproperty.value.length=4096
-
 
 #
 #  Determines whether raw HTML is allowed as Wiki input.
