added creation of a deb package containing the ElWiki service.

--- a/elwikijsp.root/bundles_import/pom.xml
+++ b/elwikijsp.root/bundles_import/pom.xml
@@ -15,6 +15,7 @@
 
 	<modules>
 		<module>dwe.data</module>
+		<module>org.elwiki.manager.importer</module>
 <!--
 		<module>com.opcoach.e4.preferences.mainmenu</module>
 -->
