--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -85,14 +85,13 @@ jspwiki.pageProvider = org.elwiki.pageprovider.CdoWikiPageProvider
 jspwiki.usePageCache = true
 
 #
-#  The ElWiki working directory.  If not set, a temporary path will
-#  be used.  You can see the location of the workdir in the logs.
+#  The ElWiki working directory.  If not set, a temporary path will be used.
+#  You can see the location of the workdir in the logs.
 #  It is HIGHLY recommended that you set this.
 #
-#  The working directory is used to cache things like Lucene search
-#  results.
+#  The working directory is used to cache things like Lucene search results.
 #
-elwiki.workDir = WS/
+#elwiki.workDir = WS/
 
 #
 #  ATTACHMENTS:
