--- a/elwikijsp.root/features/org.elwiki.platform.feature/build.properties
+++ b/elwikijsp.root/features/org.elwiki.platform.feature/build.properties
@@ -1,1 +1,4 @@
 bin.includes = feature.xml
+root.win32.win32.x86_64=file:java_args_win,file:run.cmd
+root.linux.gtk.x86_64=file:java_args_linux,file:run.sh
+root.linux.gtk.x86_64.permissions.755=run.sh
