--- a/elwikijsp.root/products/elwiki/.project
+++ b/elwikijsp.root/products/elwiki/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>elwiki.product</name>
+	<name>elwiki</name>
 	<comment></comment>
 	<projects>
 	</projects>
