code review (get preferences from configuration).

--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -15,7 +15,7 @@ additional.bundles = jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
                      org.eclipse.jface,\
                      org.elwiki.data,\
-                     org.elwiki.util,\
+                     org.elwiki.mail,\
                      org.apache.jasper.glassfish,\
                      org.freshcookies.security,\
                      xmlrpc
