--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -29,6 +29,33 @@ eclipse.preferences.version=1
 #  Wherever it is said that an option can be "true" or "false", you can
 #  also use "yes"/"no", or "on/off".  Just for some convenience.
 #
+#  NOTE: The relative path specification, for example for defining directories,
+#  will refer to the product runtime directory.
+#
+
+#
+#  The ElWiki working directory.
+#  NOTE: If it is not set, the Workbench workspace directory will be used.
+#  You can see the used working directory location in the logs.
+#  It is recommended that you set this.
+#
+#  The working directory is used to cache things like Lucene search results.
+#
+#elwiki.workDir = WS/
+
+#
+#  Defines the directory where the H2 database is located.
+#  If not specified, it is defined as the location of the ElWiki working directory.
+#
+elwiki.h2.database.place=D:/devj/dev_wikijsp/GIT/elwiki+jsp_2022-12/database_repository/
+
+#
+#  The directory of the attached files of ElWiki pages.
+#  If not specified, it is defined as a directory located in the ElWiki working directory.
+#  By default it can be placed in the Workbench workspace,
+#  if working directory also is not specified: ${workspace_loc}/pages_attachment/.
+#
+#elwiki.attachmentDir = pages_attachment/
 
 #
 #  You can use this to override the default application name.  It affects
@@ -84,14 +111,6 @@ jspwiki.pageProvider = org.elwiki.pageprovider.CdoWikiPageProvider
 #
 jspwiki.usePageCache = true
 
-#
-#  The ElWiki working directory.  If not set, a temporary path will be used.
-#  You can see the location of the workdir in the logs.
-#  It is HIGHLY recommended that you set this.
-#
-#  The working directory is used to cache things like Lucene search results.
-#
-#elwiki.workDir = WS/
 
 #
 #  ATTACHMENTS:
@@ -118,10 +137,6 @@ jspwiki.attachmentProvider = BasicAttachmentProvider
 #  If not provided, will default to a "jspwiki-files" directory
 #  in the user's home folder.
 #
-
-#
-# For ElWiki
-elwiki.attachmentDir = pages_attachment/
 
 #
 #  You can tell the BasicAttachmentProvider to add a flag
@@ -707,7 +722,7 @@ mail.from = JSPWiki <JSPWiki@localhost>
 #     You will need to configure your container to provide a JavaMail
 #     resource factory. See your container documentation, or check our
 #     fairly complete documentation (with examples for Tomcat) in
-#     the JavaDocs for org.apache.wiki.util.MailUtil.
+#     the JavaDocs for org.apache.wiki.util0.MailUtil.
 #
 #  JNDI resource name. The commented-out value is the default.
 #jspwiki.mail.jndiname = mail/Session
