--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.workflow/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.workflow/build.properties
@@ -3,5 +3,6 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/
-additional.bundles = org.osgi.service.event,\
-                     javax.mail
+additional.bundles = javax.mail,\
+                     org.osgi.service.event,\
+                     org.elwiki.mail
