--- a/elwikijsp.root/bundles_managers/pom.xml
+++ b/elwikijsp.root/bundles_managers/pom.xml
@@ -28,5 +28,6 @@
 		<module>org.elwiki.manager.wikiscope</module>
 		<module>org.elwiki.manager.workflow</module>
 		<module>org.elwiki.urlconstructor</module>
+		<module>org.elwiki.mail</module>
 	</modules>
 </project>
