the first approximation to 2023.

--- a/elwikijsp.root/bundles/org.elwiki.engine/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.engine/build.properties
@@ -3,6 +3,5 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/elwiki.Engine.xml
-additional.bundles = jakarta.servlet-api,\
-                     org.elwiki.configuration,\
+additional.bundles = org.elwiki.configuration,\
                      org.eclipse.jdt.annotation
