--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -11,11 +11,8 @@ bin.includes = .,\
                taglibs-standard-spec-1.2.5.jar,\
                shapes/,\
                ini/
-additional.bundles = jakarta.servlet-api,\
-                     javax.servlet.jsp-api,\
-                     org.eclipse.jface,\
+additional.bundles = org.eclipse.jface,\
                      org.elwiki.data,\
                      org.elwiki.mail,\
-                     org.apache.jasper.glassfish,\
                      org.freshcookies.security,\
                      xmlrpc
