--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
@@ -5,11 +5,9 @@ bin.includes = META-INF/,\
                OSGI-INF/elwiki.DefaultRssGenerator.xml
 additional.bundles = org.eclipse.osgi.services,\
                      org.eclipse.jface,\
-                     jakarta.servlet-api,\
-                     javax.servlet.jsp-api,\
                      org.apache.log4j,\
-                     org.apache.commons.commons-text,\
                      org.apache.commons.lang3,\
+                     org.apache.commons.text,\
                      org.jdom.2,\
                      org.elwiki.api,\
                      org.elwiki.data,\
