--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
@@ -3,9 +3,8 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/
-additional.bundles = jakarta.servlet-api,\
-                     org.eclipse.jface,\
+additional.bundles = org.eclipse.jface,\
                      org.elwiki.configuration,\
-                     org.apache.commons.commons-text,\
                      org.apache.commons.lang3,\
+                     org.apache.commons.text,\
                      org.eclipse.jdt.annotation
