--- a/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/build.properties
+++ b/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/build.properties
@@ -4,8 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                OSGI-INF/
-additional.bundles = jakarta.servlet-api,\
-                     javax.servlet.jsp-api,\
-                     javax.mail,\
-                     org.slf4j.api,\
+additional.bundles = javax.mail,\
                      org.elwiki.util
