--- a/elwikijsp.root/bundles/org.elwiki.api/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.api/build.properties
@@ -4,8 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                OSGI-INF/
-additional.bundles = jakarta.servlet-api,\
-                     javax.servlet.jsp-api,\
-                     org.eclipse.jface,\
-                     org.apache.commons.commons-text,\
-                     org.apache.commons.lang3
+additional.bundles = org.eclipse.jface,\
+                     org.apache.commons.lang3,\
+                     org.apache.commons.text
