--- a/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
+++ b/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
@@ -6,8 +6,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                jspwiki.policy,\
                users+groups.json
-additional.bundles = jakarta.servlet-api,\
-                     javax.mail,\
+additional.bundles = javax.mail,\
                      org.elwiki.util,\
                      org.elwiki.api,\
                      org.elwiki.configuration
