--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.plugins/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.plugins/build.properties
@@ -4,6 +4,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/
 additional.bundles = jakarta.servlet-api,\
-                     javax.servlet.jsp-api,\
+                     jakarta.servlet.jsp,\
                      org.elwiki.configuration,\
                      org.elwiki.util
