basic launch with bundles of 2023-12.

--- a/elwikijsp.root/bundles/org.elwiki.api/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.api/build.properties
@@ -5,5 +5,4 @@ bin.includes = META-INF/,\
                plugin.xml,\
                OSGI-INF/
 additional.bundles = org.eclipse.jface,\
-                     org.apache.commons.lang3,\
-                     org.apache.commons.text
+                     org.apache.commons.lang3
