--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
@@ -8,7 +8,7 @@ additional.bundles = org.eclipse.osgi.services,\
                      org.apache.log4j,\
                      org.apache.commons.lang3,\
                      org.apache.commons.text,\
-                     org.jdom.2,\
+                     org.jdom2,\
                      org.elwiki.api,\
                      org.elwiki.data,\
                      org.elwiki.util,\
