review target platform under windows; use new version lucene v9.8.0

--- a/elwikijsp.root/bundles/org.elwiki.engine/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.engine/build.properties
@@ -2,6 +2,6 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/elwiki.Engine.xml
+               OSGI-INF/
 additional.bundles = org.elwiki.configuration,\
                      org.eclipse.jdt.annotation
