--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/elwiki.DefaultRssGenerator.xml
+               OSGI-INF/
 additional.bundles = org.eclipse.osgi.services,\
                      org.eclipse.jface,\
                      org.apache.log4j,\
