added WikiPreferences page; Authentication Manager is included in this page. (split configuration according to the corresponding modules)

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -437,7 +437,7 @@ jspwiki.renderingManager.markupParser=org.apache.wiki.parser.JSPWikiMarkupParser
 #  Supply the JAAS LoginModule class used for custom authentication here.
 #  The implementation MUST have a zero-argument constructor (as noted in the
 #  javax.security.auth.spi.LoginModule Javadocs).
-jspwiki.loginModule.class = org.apache.wiki.auth.login.AccountRegistryLoginModule
+#:FVK:moved -- jspwiki.loginModule.class = org.apache.wiki.auth.login.AccountRegistryLoginModule
 
 #
 # JAAS LoginContext parameters used to initialize the LoginModule. Note that 'param1'
@@ -451,7 +451,7 @@ jspwiki.loginModule.class = org.apache.wiki.auth.login.AccountRegistryLoginModul
 #
 # Login Throttling - Whether logins should be throttled to limit bruce-force attempts.
 #
-jspwiki.login.throttling=true
+#:FVK:moved -- jspwiki.login.throttling=true
 
 #
 #  Cookie authentication & assertion
@@ -462,7 +462,7 @@ jspwiki.login.throttling=true
 #
 #  By default, this is on.
 #
-#jspwiki.cookieAssertions=true
+#:FVK: moved -- #jspwiki.cookieAssertions=true
 
 #
 #  If you would like to keep your users logged in for weeks at a time, you can
@@ -478,7 +478,7 @@ jspwiki.login.throttling=true
 #
 #  By default, cookie authentication is off.
 #
-jspwiki.cookieAuthentication=false
+#:FVK: moved -- jspwiki.cookieAuthentication=false
 
 #
 #  Defines how many days the cookies are kept, and how often the people have to log in.
