--- a/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
+++ b/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                plugin.xml,\
                jspwiki.policy,\
-               users+groups.json
+               users+groups.json,\
+               preferences.ini
 additional.bundles = javax.mail,\
                      org.elwiki.util,\
                      org.elwiki.api,\
