add RssGenerator manager into WikiPreferences page. (not all)

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -610,7 +610,7 @@ node.translatorReader.inlinePatterns = *.png,*.jpg,*.gif
 #  Determine if the RSS file should be generated at all.  Allowed values
 #  are "true" and "false".  Default is "false".
 #
-jspwiki.rss.generate = false
+#:FVK:moved -- jspwiki.rss.generate = false
 
 #
 #  Determine the name of the RSS file. This path is relative to your
