--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
@@ -2,14 +2,13 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               preferences.ini
 additional.bundles = org.eclipse.osgi.services,\
                      org.eclipse.jface,\
-                     org.apache.log4j,\
                      org.apache.commons.lang3,\
                      org.apache.commons.text,\
                      org.jdom2,\
-                     org.elwiki.api,\
                      org.elwiki.data,\
                      org.elwiki.util,\
                      org.elwiki.configuration
