--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/preferences.ini
@@ -16,10 +16,5 @@
 #  under the License.
 eclipse.preferences.version=1
 
-#  AUTHENTICATION
-cookieAssertions=true
-cookieAuthentication=false
-login.throttling=true
-loginModule.class=org.apache.wiki.auth.login.AccountRegistryLoginModule
-
-#  AUTHORIZATION
+#  RSS
+rss.generate=false
