add all options of RssGenerator manager into WikiPreferences page; the options code is shared.

--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/preferences.ini
@@ -18,3 +18,7 @@ eclipse.preferences.version=1
 
 #  RSS
 rss.generate=false
+rss.fileName=rss.rdf
+rss.interval=3600
+rss.channelDescription=Oh poor me, my owner has not set \na channel description at all.\nPity me.
+rss.channelLanguage=en-us
