--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -616,7 +616,7 @@ node.translatorReader.inlinePatterns = *.png,*.jpg,*.gif
 #  Determine the name of the RSS file. This path is relative to your
 #  Wiki root.  Default is "rss.rdf"
 #
-jspwiki.rss.fileName = rss.rdf
+#:FVK:moved -- jspwiki.rss.fileName = rss.rdf
 
 #
 #  Determine the refresh interval (ie. how often the RSS file is regenerated.
@@ -624,7 +624,7 @@ jspwiki.rss.fileName = rss.rdf
 #  Anything above five minutes is probably okay.  The default value is one hour.
 #  The value should be in seconds.
 #
-jspwiki.rss.interval = 3600
+#:FVK:moved -- jspwiki.rss.interval = 3600
 
 #
 #  The text you want to be shown as your "channel description" when someone
@@ -632,16 +632,16 @@ jspwiki.rss.interval = 3600
 #  so.  You can continue to a new line by adding a backslash to the end of the
 #  line.  Default is to have no description.
 #
-jspwiki.rss.channelDescription = Oh poor me, my owner has not set \
-                                 a channel description at all. \
-                                 Pity me.
+#:FVK:moved -- jspwiki.rss.channelDescription = Oh poor me, my owner has not set \
+#                                 a channel description at all. \
+#                                 Pity me.
 
 #
 #  The language of your Wiki.  This is a standard, two-letter language
 #  code, or in case of some languages, two letters for the country,
 #  a dash, and two letters for the dialect.
 #
-jspwiki.rss.channelLanguage = en-us
+#:FVK:moved -- jspwiki.rss.channelLanguage = en-us
 
 ###########################################################################
 # User preferences
