--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -509,7 +509,7 @@ jspwiki.renderingManager.markupParser=org.apache.wiki.parser.JSPWikiMarkupParser
 #jspwiki.authorizer = org.apache.wiki.auth.authorize.WebContainerAuthorizer
 # ElWiki version - plugin ID
 #jspwiki.authorizer = WebContainerAuthorizer
-jspwiki.authorizer = DefaultAuthorizer
+#:FVK:moved -- jspwiki.authorizer = DefaultAuthorizer
 
 
 #  B) GROUPS
@@ -518,7 +518,7 @@ jspwiki.authorizer = DefaultAuthorizer
 #  GroupDatabase. The default group database uses an XML file for persistent
 #  storage. Override with your own GroupDatabase implementation with this property:
 
-jspwiki.groupdatabase = org.apache.wiki.auth.authorize.XMLGroupDatabase
+#:FVK: removed -- jspwiki.groupdatabase = org.apache.wiki.auth.authorize.XMLGroupDatabase
 
 #  The default group database implementation stores member lists
 #  in an XML file. The location of this file should be in a secure directory
@@ -531,14 +531,14 @@ jspwiki.groupdatabase = org.apache.wiki.auth.authorize.XMLGroupDatabase
 #  ok to leave this un-set, as long as users know that their groups could
 #  "disappear" if the wiki app is ever redeployed.
 
-#jspwiki.xmlGroupDatabaseFile = /etc/tomcat/groupdatabase.xml
+#:FVK: removed -- #jspwiki.xmlGroupDatabaseFile = /etc/tomcat/groupdatabase.xml
 
 #  USER DATABASE
 #  User's wiki profiles are stored in a AccountRegistry. The default user database
 #  uses an XML file for persistent storage.
 #  Override with your own UserDatabase implementation with this property:
 
-jspwiki.userdatabase = org.apache.wiki.auth.user.XMLUserDatabase
+#:FVK: removed -- jspwiki.userdatabase = org.apache.wiki.auth.user.XMLUserDatabase
 
 #  The default user database implementation stores usernames and passwords
 #  in an XML file. Passwords are SHA-1 hashed. The location of this file
@@ -552,7 +552,7 @@ jspwiki.userdatabase = org.apache.wiki.auth.user.XMLUserDatabase
 #  ok to leave this un-set, as long as users know that their profiles could
 #  "disappear" if the wiki app is ever redeployed.
 
-#jspwiki.xmlUserDatabaseFile = /etc/tomcat/userdatabase.xml
+#:FVK: removed -- #jspwiki.xmlUserDatabaseFile = /etc/tomcat/userdatabase.xml
 
 # You can also use a JDBC database for storing user profiles,
 # to be configured below in the JDBC section. See the online
@@ -560,7 +560,7 @@ jspwiki.userdatabase = org.apache.wiki.auth.user.XMLUserDatabase
 # the JDBCUserDatabase class for details on how to configure it.
 #
 
-#jspwiki.userdatabase = org.apache.wiki.auth.user.JDBCUserDatabase
+#:FVK: removed -- #jspwiki.userdatabase = org.apache.wiki.auth.user.JDBCUserDatabase
 
 #  If your JSPWiki user database shares login information with your
 #  web container's authentication realm, you can configure JSPWiki to
@@ -569,7 +569,7 @@ jspwiki.userdatabase = org.apache.wiki.auth.user.XMLUserDatabase
 #  with compatible columns and tables. If you don't know what this means,
 #  then leave this property set to FALSE (the default).
 
-#jspwiki.userdatabase.isSharedWithContainer = false
+#:FVK: removed -- #jspwiki.userdatabase.isSharedWithContainer = false
 
 #  ACCESS CONTROL LISTS
 #  Last but not least, JSPWiki needs a way of reading and persisting page
@@ -577,7 +577,7 @@ jspwiki.userdatabase = org.apache.wiki.auth.user.XMLUserDatabase
 #  markup. For example: "[{ALLOW edit Charlie}]". If using a custom
 #  ACL manager, specify the AclManager implementation class here:
 
-jspwiki.aclManager = org.apache.wiki.auth.acl.DefaultAclManager
+#:FVK: removed -- jspwiki.aclManager = org.apache.wiki.auth.acl.DefaultAclManager
 
 
 ############################################################################
@@ -675,29 +675,29 @@ jspwiki.preferences.default-locale = en
 #jdbc.user.id=jspwiki
 #jdbc.user.password=password
 
-jspwiki.userdatabase.datasource=jdbc/UserDatabase
-jspwiki.userdatabase.table=users
-jspwiki.userdatabase.uid=uid
-jspwiki.userdatabase.email=email
-jspwiki.userdatabase.fullName=full_name
-jspwiki.userdatabase.loginName=login_name
-jspwiki.userdatabase.password=password
-jspwiki.userdatabase.wikiName=wiki_name
-jspwiki.userdatabase.created=created
-jspwiki.userdatabase.modified=modified
-jspwiki.userdatabase.lockExpiry=lock_expiry
-jspwiki.userdatabase.attributes=attributes
-jspwiki.userdatabase.roleTable=roles
-jspwiki.userdatabase.role=role
-jspwiki.groupdatabase.datasource=jdbc/GroupDatabase
-jspwiki.groupdatabase.table=groups
-jspwiki.groupdatabase.membertable=group_members
-jspwiki.groupdatabase.created=created
-jspwiki.groupdatabase.creator=creator
-jspwiki.groupdatabase.name=name
-jspwiki.groupdatabase.member=member
-jspwiki.groupdatabase.modified=modified
-jspwiki.groupdatabase.modifier=modifier
+#:FVK: removed -- jspwiki.userdatabase.datasource=jdbc/UserDatabase
+#:FVK: removed -- jspwiki.userdatabase.table=users
+#:FVK: removed -- jspwiki.userdatabase.uid=uid
+#:FVK: removed -- jspwiki.userdatabase.email=email
+#:FVK: removed -- jspwiki.userdatabase.fullName=full_name
+#:FVK: removed -- jspwiki.userdatabase.loginName=login_name
+#:FVK: removed -- jspwiki.userdatabase.password=password
+#:FVK: removed -- jspwiki.userdatabase.wikiName=wiki_name
+#:FVK: removed -- jspwiki.userdatabase.created=created
+#:FVK: removed -- jspwiki.userdatabase.modified=modified
+#:FVK: removed -- jspwiki.userdatabase.lockExpiry=lock_expiry
+#:FVK: removed -- jspwiki.userdatabase.attributes=attributes
+#:FVK: removed -- jspwiki.userdatabase.roleTable=roles
+#:FVK: removed -- jspwiki.userdatabase.role=role
+#:FVK: removed -- jspwiki.groupdatabase.datasource=jdbc/GroupDatabase
+#:FVK: removed -- jspwiki.groupdatabase.table=groups
+#:FVK: removed -- jspwiki.groupdatabase.membertable=group_members
+#:FVK: removed -- jspwiki.groupdatabase.created=created
+#:FVK: removed -- jspwiki.groupdatabase.creator=creator
+#:FVK: removed -- jspwiki.groupdatabase.name=name
+#:FVK: removed -- jspwiki.groupdatabase.member=member
+#:FVK: removed -- jspwiki.groupdatabase.modified=modified
+#:FVK: removed -- jspwiki.groupdatabase.modifier=modifier
 
 ###########################################################################
 #
