--- a/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/preferences.ini
+++ b/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/preferences.ini
@@ -23,3 +23,5 @@ login.throttling=true
 loginModule.class=org.apache.wiki.auth.login.AccountRegistryLoginModule
 
 #  AUTHORIZATION
+authorizer=DefaultAuthorizer
+#:FVK: authorizer=WebContainerAuthorizer
