added global preferences; parameter applicationName as preference option.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -63,7 +63,7 @@ elwiki.h2.database.place=D:/devj/dev_wikijsp/GIT/elwiki_jsp_2023-12/database_rep
 #  the actual web name (http://my.com/mywiki) of the application, but usually
 #  it is the same.
 #
-jspwiki.applicationName = ElWiki
+#:FVK:moved -- jspwiki.applicationName = ElWiki
 
 #
 #  Which page provider class to use.  Possibilities are:
