add Page Manager into WikiPreferences page.

--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.page/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.page/build.properties
@@ -4,9 +4,9 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                plugin.xml,\
-               schema/
+               schema/,\
+               preferences.ini
 additional.bundles = org.eclipse.jface,\
                      org.elwiki.configuration,\
-                     org.elwiki.api,\
                      org.elwiki.data,\
                      org.elwiki.util
