added into global preferences: work dir, H2 DB place, attach dir.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -34,28 +34,10 @@ eclipse.preferences.version=1
 #
 
 #
-#  The ElWiki working directory.
-#  NOTE: If it is not set, the Workbench workspace directory will be used.
-#  You can see the used working directory location in the logs.
-#  It is recommended that you set this.
-#
-#  The working directory is used to cache things like Lucene search results.
-#
-#elwiki.workDir = WS/
-
-#
 #  Defines the directory where the H2 database is located.
 #  If not specified, it is defined as the location of the ElWiki working directory.
 #
-elwiki.h2.database.place=D:/devj/dev_wikijsp/GIT/elwiki_jsp_2023-12/database_repository/
-
-#
-#  The directory of the attached files of ElWiki pages.
-#  If not specified, it is defined as a directory located in the ElWiki working directory.
-#  By default it can be placed in the Workbench workspace,
-#  if working directory also is not specified: ${workspace_loc}/pages_attachment/.
-#
-#elwiki.attachmentDir = pages_attachment/
+#:FVK:moved -- elwiki.h2.database.place=D:/devj/dev_wikijsp/GIT/elwiki_jsp_2023-12/database_repository/
 
 #
 #  You can use this to override the default application name.  It affects
@@ -71,7 +53,7 @@ elwiki.h2.database.place=D:/devj/dev_wikijsp/GIT/elwiki_jsp_2023-12/database_rep
 # deprecated: FileSystemProvider     - for simple pure file storage with no version information
 # deprecated: VersioningFileProvider - for simple pure file storage with    version information
 #
-jspwiki.pageProvider = org.elwiki.pageprovider.CdoWikiPageProvider
+#:FVK:moved -- jspwiki.pageProvider = org.elwiki.pageprovider.CdoWikiPageProvider
 
 #
 # How to order pages in various lists and plugins.  By default, they are
@@ -111,6 +93,31 @@ jspwiki.pageProvider = org.elwiki.pageprovider.CdoWikiPageProvider
 #
 jspwiki.usePageCache = true
 
+#
+#
+#
+#
+#
+#
+
+
+#
+#  The ElWiki working directory.
+#  NOTE: If it is not set, the Workbench workspace directory will be used.
+#  You can see the used working directory location in the logs.
+#  It is recommended that you set this.
+#
+#  The working directory is used to cache things like Lucene search results.
+#
+#:FVK:moved -- #elwiki.workDir = WS/
+
+#
+#  The directory of the attached files of ElWiki pages.
+#  If not specified, it is defined as a directory located in the ElWiki working directory.
+#  By default it can be placed in the Workbench workspace,
+#  if working directory also is not specified: ${workspace_loc}/pages_attachment/.
+#
+#:FVK:moved -- #elwiki.attachmentDir = pages_attachment/
 
 #
 #  ATTACHMENTS:
