--- a/elwikijsp.root/bundles/org.elwiki.api/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.api/build.properties
@@ -3,6 +3,7 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               OSGI-INF/
+               OSGI-INF/,\
+               preferences.ini
 additional.bundles = org.eclipse.jface,\
                      org.apache.commons.lang3
