--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -267,7 +267,7 @@ jspwiki.breakTitleWithSpaces = false
 #
 #  For any other language, you'll probably want to turn this off.
 #
-jspwiki.translatorReader.matchEnglishPlurals = false
+#:FVK: removed -- jspwiki.translatorReader.matchEnglishPlurals = false
 
 #
 #  If you set this to true, the Wiki translator will then also consider
