remove option jspwiki.breakTitleWithSpaces.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -257,7 +257,7 @@ jspwiki.translatorReader.allowHTML = false
 #  page titles readable on some occasions, but it does have the
 #  drawback of making the titles look a bit funny at times.
 #
-jspwiki.breakTitleWithSpaces = false
+#:FVK: removed -- jspwiki.breakTitleWithSpaces = false
 
 #
 #  If set to true, this property means that "WikiName" and "WikiNames"
