--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -280,7 +280,7 @@ jspwiki.translatorReader.allowHTML = false
 #
 #  This option can be overridden on a per-page basis using the SET directive.
 #
-jspwiki.translatorReader.camelCaseLinks = false
+#:FVK: removed -- jspwiki.translatorReader.camelCaseLinks = false
 
 #
 #  This sets the default template used by the Wiki engine.  The templates
