review Attachment options.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -129,7 +129,7 @@ jspwiki.usePageCache = true
 #    * Leave the value empty (or just comment the line out)
 #      the attachment functionality is disabled
 #
-jspwiki.attachmentProvider = BasicAttachmentProvider
+#:FVK:TODO release -- jspwiki.attachmentProvider = BasicAttachmentProvider
 
 #
 #  The BasicAttachmentProvider needs to know where to store the files
@@ -159,7 +159,7 @@ jspwiki.attachmentProvider = BasicAttachmentProvider
 #  If you don't define this property, cache is enabled by default for
 #  all attachments
 #
-#  jspwiki.basicAttachmentProvider.disableCache = .*\.xls|.*\.doc
+#:FVK:moved -- #  jspwiki.basicAttachmentProvider.disableCache = .*\.xls|.*\.doc
 
 #
 #  You can limit the maximum size of an attachment by setting this
@@ -168,7 +168,7 @@ jspwiki.attachmentProvider = BasicAttachmentProvider
 # This limit is not enforced for users with AdminPermissions.
 #
 #  The following line would limit the attachment size to 100,000 bytes
-#jspwiki.attachment.maxsize=100000
+#:FVK:TODO release -- #jspwiki.attachment.maxsize=100000
 
 #
 #  By default JSPWiki accepts all types of attachments.  However, you
@@ -180,13 +180,13 @@ jspwiki.attachmentProvider = BasicAttachmentProvider
 #  These both are space-separated lists of file suffixes
 #
 #  Example: Allow only PNG, JPG, ZIP and JAR file attachments
-#jspwiki.attachment.allowed=.png .jpg .zip .jar
-
+#:FVK:TODO release -- #jspwiki.attachment.allowed=.png .jpg .zip .jar
+ 
 #  Example: Forbid HTML, PHP, ASP and EXE
-#jspwiki.attachment.forbidden=.html .htm .php .asp .exe
+#:FVK:TODO release -- #jspwiki.attachment.forbidden=.html .htm .php .asp .exe
 
 # Example: Attachment links to HTML, HTM and MP3 files would force a download rather then opening the attachment
-#jspwiki.attachment.forceDownload= .html .htm
+#:FVK:TODO release -- #jspwiki.attachment.forceDownload= .html .htm
 
 #
 #  page Diff Representation
