option jspwiki.allowCreationOfEmptyPages make as global.

--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -307,7 +307,7 @@ jspwiki.translatorReader.allowHTML = false
 #
 #  Allow creation of empty pages. Defaults to false.
 #
-#jspwiki.allowCreationOfEmptyPages = false
+#:FVK:moved -- #jspwiki.allowCreationOfEmptyPages = false
 
 #
 #  If set to true, all outward links have a small icon attached.  The icon
