--- a/elwikijsp.root/bundles_managers/org.elwiki.part.id2name/.project
+++ b/elwikijsp.root/bundles_managers/org.elwiki.part.id2name/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.elwiki.manager.referencemanager</name>
+	<name>org.elwiki.part.id2name</name>
 	<comment></comment>
 	<projects>
 	</projects>
