--- a/elwikijsp.root/bundles_managers/org.elwiki.part.id2name/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.part.id2name/build.properties
@@ -2,4 +2,10 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/elwiki.Id2NameMapper.xml
+               OSGI-INF/
+additional.bundles = org.osgi.service.event,\
+                     org.eclipse.osgi.services,\
+                     org.apache.log4j,\
+                     org.apache.commons.lang3,\
+                     org.elwiki.data,\
+                     org.eclipse.core.jobs
